--- a/src/app/view/stock/stock-item/stock-item.component.html
+++ b/src/app/view/stock/stock-item/stock-item.component.html
@@ -1,93 +1,52 @@
-<div class="card text-white bg-dark shadow mb-2" style="margin-left: 16%; margin-right: 16%;" >
-    <div class="card-header">
-        Ajouter Un Produit
+
+<div class="shadow card text-white bg-dark">
+    <div class="card-header bg-dark">
+        <h4 style="display: inline;"> Stock Items </h4>
+        <button style="float: right;" type="button" class="btn btn-primary fa fa-plus mr-2" data-toggle="modal" data-target="#add"></button>
     </div>
-    <div class="card-body">
-        <div class="form-group">
-            <label>Reference:</label>
-            <input type="text" placeholder="entrer la ref du produit" class="form-control" [(ngModel)]=ref>
-        </div>
-
-        <div class="form-group">
-            <label>Designation:</label>
-            <input type="text" placeholder="entrer la designation du produit" class="form-control"
-                [(ngModel)]=item.produit.libelle>
-        </div>
-        <div class="form-group">
-            <label>Category:</label><button style="float: right;" data-toggle="modal" data-target="#f-cat" class="btn btn-success mb-2">+</button>
-            <select class="form-control" id="cat" [(ngModel)]=item.produit.cat.libelle>
-                <option *ngFor="let cat of cats" value="{{cat.libelle}}">
-                    {{cat.libelle}}
-                </option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label>Unité:</label><button style="float: right;" data-toggle="modal" data-target="#f-unite" class="btn btn-success mb-2">+</button>
-            <select class="form-control" id="unite" [(ngModel)]=item.produit.unite.libelle>
-                <option *ngFor="let unite of unites" value="{{unite.libelle}}">
-                    {{unite.libelle}}
-                </option>
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label>Quantite:</label>
-            <input type="number" placeholder="entrer la qte du produit" class="form-control"
-                [(ngModel)]=item.produit.qte>
-        </div>
-        <div class="form-group">
-            <label>Quantite Alerte:</label>
-            <input type="number" placeholder="entrer la qte du produit" class="form-control"
-                [(ngModel)]=item.qtAlerte>
-        </div>
-        <div class="form-group">
-            <label>Prix:</label>
-            <input type="number" placeholder="entrer le prix du produit" class="form-control" [(ngModel)]=item.produit.prix>
-        </div>
-        
+    <div class="card-body table-responsive">
+        <table class="table text-white table-bordered">
+            <thead class=" thead-inverse ">
+                <tr>
+                    <th>Designation</th>
+                    <th>Quantite Stocker</th>
+                    <th>Quantite Alerte</th>
+                    <th>Quantite Rester</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngIf="stockItems.length==0">
+                    <td class="alert alert-secondary" colspan="6" role="alert">
+                        No data to display.
+                    </td>
+                </tr>
+                <tr *ngFor="let item of stockItems">
+                    <td>{{item.produit.libelle}}</td>
+                    <td>{{item.qteStock}}</td>
+                    <td>{{item.qtAlerte}}</td>
+                    <td>{{item.qtFinal}}</td>
+                    <td><button class="btn btn-danger fa fa-trash" (click)="onRemoveItem(item)" type="button"></button></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-    <div class="card-footer">
-        <button (click)="onAddItem()" type="submit" class="btn btn-primary " [routerLink]="['/comptable/stock']">add Product</button>
-    </div>
-</div>
 
 
-<div class="modal fade bd-example-modal-lg" id="f-cat" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Add New Category</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <div class="modal fade bd-example-modal-lg" id="add" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Ajouter Un Stock Item</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-            </div>
-            <div class="modal-body">
-                <app-category-create></app-category-create>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade bd-example-modal-lg" id="f-unite" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Ajouter Nouvelle Unité</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <app-unite-create></app-unite-create>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                </div>
+                <div class="modal-body">
+                    <app-stock></app-stock>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
