--- a/src/app/view/stock/stock-list/stock-list.component.html
+++ b/src/app/view/stock/stock-list/stock-list.component.html
@@ -12,12 +12,7 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="dept">Filter By Ref</label>
-                        <select class="form-control" id="ref" [(ngModel)]=ref (change)="getStockByRef()">
-                            <option selected></option>
-                            <option *ngFor="let stock of stocks" value="{{stock.ref}}">
-                                {{stock.ref}}
-                            </option>
-                        </select>
+                            <input id="text" type="text" class="form-control" [(ngModel)]=ref (change)="findStockByRef()">
                     </div>
                 </div>
 
@@ -40,11 +35,55 @@
                     <td>{{eb.dateResu}}</td>
                     <td>
                         <button (click)="onStockDelete(eb)" class="btn btn-danger fa fa-trash mr-2"></button>
-                        <button (click)="findStockItemByRef(eb.ref)" class="btn btn-danger fa fa-plus mr-2" [routerLink]="['/comptable/stock']"></button>
+                        <button (click)="findStockItemByStockRef(eb)" data-toggle="modal" data-target="#myModal" class="btn btn-primary fa fa-eye mr-2"></button>
                     </td>
                 </tr>
             </tbody>
         </table>
-     
     </div>
+    </div>
+    <div class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Produits</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <table class="table table-light table-bordered table-hover">
+                        <thead>
+                            <tr>
+                                <th>Designation</th>
+                                <th>Unite</th>
+                                <th>Quantite Alerte</th>
+                                <th>Quantite Rester</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngIf="stockItems.length==0">
+                                <td class="alert alert-secondary" colspan="6" role="alert">
+                                    No data to display.
+                                </td>
+                            </tr>
+                            <tr *ngFor="let item of stockItems ">
+                                <td>{{item.produit.libelle}}</td>
+                                <td>{{item.produit.unite.libelle}}</td>
+                                <td>{{item.qtAlerte}}</td>
+                                <td><input [min]=1 type="number"  [(ngModel)]=item.qtFinal class="form-control col-xs-2"></td>
+                                <td> <button class="btn btn-block btn-info fa fa-plus"  (click)="onAddItemUpdate()"></button></td>
+                               
+                            </tr>
+                        </tbody>
+                    </table>
+    
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="updateStock()">Save</button>
 
+                </div>
+            </div>
+        </div>
+    </div>
